language/move-lang/tests/move_check/typing/break_any_type.exp
error: 

   ┌── tests/move_check/typing/break_any_type.move:6:17 ───
   │
 6 │             foo(break)
   │                 ^^^^^ Invalid use of a divergent expression. The code following the evaluation of this expression will be dead and should be removed. In some cases, this is necessary to prevent unused resource values.
   │

