language/move-lang/tests/move_check/typing/break_any_type.move
module M {
    resource struct Coin {}

    t1() {
        while (true) {
            foo(break)
        }
    }


    foo(c: Coin) {
        Coin {} = c;
    }
}
